--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,8 +16,6 @@
         <nav id="navbar" class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="@Url.Action("Index", "Home")">
-                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" 
-                    width="30" height="24" class="d-inline-block align-text-top">
                     Talent Trade
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
@@ -47,10 +45,7 @@
                             <a class="nav-link active" aria-current="page" href="@Url.Action("Index", "Home")">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Explorar</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">FAQS</a>
+                            <a class="nav-link" href="@Url.Action("Faq", "Home")">FAQS</a>
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
